added new eh to makefile

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -132,7 +132,8 @@ SRCS=\
    TextureBasedEventHandler.cxx\
    TBActivateEH.cxx\
    TBUpdateSolutionEH.cxx\
-   QCLoadFileEH.cxx
+   QCLoadFileEH.cxx\
+   StoredSceneEH.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
