--- a/VE_Conductor/UIWizard/Makefile.TEMPLATE
+++ b/VE_Conductor/UIWizard/Makefile.TEMPLATE
@@ -28,9 +28,7 @@ EXTRA_CFLAGS+=
 
 EXTRA_CXXFLAGS+= 
 
-EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)/VE_Conductor/Framework 
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
-
 EXTRA_DEFS+=
 
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
@@ -58,6 +56,7 @@ include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
 
 # -----------------------------------------------------------------------------
 # Application build targets.
