--- a/VE_Conductor/UIWizard/Makefile.Unit.Template
+++ b/VE_Conductor/UIWizard/Makefile.Unit.Template
@@ -10,8 +10,6 @@ all:
 	$(MAKE) $(APP_NAME)
 
 SRCS=\
-   moduleC.cpp \
-   moduleS.cpp \
    Template_i.cpp \
    Template_client.cpp
 
@@ -31,7 +29,9 @@ EXTRA_CXXFLAGS+=
 
 EXTRA_DEFS+=
 
-EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
+EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
+EXTRA_LIBS+= -lVE_ConductorLib
+EXTRA_LIBS+= -lVE_OpenModuleLib
 
 LINKALL_ON= -all
 LINKALL_OFF=
@@ -39,12 +39,8 @@ LINKALL_OFF=
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-IDL_HOME = $(VE_SUITE_HOME)/VEOpen
+#EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VEOpen/skel 
 
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VEOpen/skel 
-
-EXTRA_INCLUDES += -I$(VE_SUITE_HOME)/VE_Conductor/Framework 
-EXTRA_INCLUDES += -I$(VE_SUITE_HOME)/VEOpen/skel
 EXTRA_INCLUDES += -I$(VE_SUITE_HOME)
 
 include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
@@ -61,9 +57,5 @@ cxx: $(OBJS)
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 ${APP_NAME}: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-
-#install:
-#	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
-#	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
 CLEAN_FILES+= $(APP_NAME)
