SCons files from VE_Open through VE_CE should work for RHEL.

--- a/VE_CE/SConscript
+++ b/VE_CE/SConscript
@@ -4,6 +4,8 @@ pj = os.path.join
 Import('baseEnv')
 Import('Platform')
 Import( '*' )
+Import('libPath')
+Import('cfdHostType')
 
 
 ce_srcs = Split("""
@@ -30,23 +32,23 @@ env = baseEnv.Copy()
 env.Append(CPPPATH = ['#'])
 env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
 env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
-env.Append(LIBPATH = '#',
+env.Append(LIBPATH = libPath,
               LIBS = ['VE_ConductorLib', 'VE_XMLLib', 'VE_ModelLib', 'VE_CADLib',
                       'VE_ShaderLib', 'VE_CE_UtilitiesLib', 'VE_OpenModuleLib'])
 for lib in xerces:
    env.Append(LIBS = lib)
 for lib in ace_tao:
     env.Append(LIBS = lib) 
-for lib in vtk:
-   env.Append(LIBS = lib)
-for lib in osg:
-   env.Append(LIBS = lib) 
-for lib in boost:
-   env.Append(LIBS = lib)  
+##for lib in vtk:
+##   env.Append(LIBS = lib)
+##for lib in osg:
+##   env.Append(LIBS = lib) 
+##for lib in boost:
+##   env.Append(LIBS = lib)  
 env.ParseConfig( 'vpr-config --libs --extra-libs --includes' )
 #env.ParseConfig( 'corona-config --libs' )
 env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 env.ParseConfig( 'wx-config --cxxflags --libs' )
 
 #env.SharedLibrary(target = '#/VE_CE', source = ce_srcs)
-env.Program(pj('#','bin',Platform,'Exe_Server'), source = ce_srcs)
+env.Program(pj('#', 'bin', cfdHostType, 'Exe_server'), source = ce_srcs)
