--- a/VE_Open/SConscript
+++ b/VE_Open/SConscript
@@ -8,38 +8,20 @@ env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
 
 env.Append(CPPPATH = ['idl'])
-print "CPPPATH: " + str(env["CPPPATH"]) ##TESTER
+print "CPPPATH: %s" % str(env["CPPPATH"]) ##TESTER
 
-idlFile = ['','']
 target = ['module.h', 'VjObs.h']
-srcs = ['module.idl', 'VjObs.idl']
-srcsss = list()
 
 idlCmd = 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
-idlFile[0] = idlCmd + srcs[0]
-idlFile[1] = idlCmd + srcs[1]
-
-##for fileIdl in srcs:
-##   print "FileIDL: %s" % (fileIdl) ##TESTER
-##   idlCmd = 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
-##   idlFile[0] = idlCmd + srcs[0]
-##   idlFile[1] = idlCmd + srcs[1]
-
-for i in [0,1]:
-   bld = Builder(action = idlFile[i])
-   env.Append(BUILDERS={'tao_idl':bld})
-   env.tao_idl(target[i], srcsss)
+srcs = ['module.idl', 'VjObs.idl']
+idlFile = ['','']
+for i in range(len(idlFile)):
+    idlFile[i] = idlCmd + srcs[i]
+    bld = Builder(action = idlFile[i])
+    env.Append(BUILDERS = {'tao_idl': bld})
+    env.tao_idl(target[i], list())
 
 print "IDLFile: %s" % idlFile ##TESTER
-
-
-
-
-
-
-
-
-
 
 ######
 #tao_idl -o ./skel -GI -I./idl  ./idl/module.idl
@@ -53,8 +35,6 @@ print "IDLFile: %s" % idlFile ##TESTER
 #target.extend(['moduleC.h'])
 #target.extend(['VjObs.h'])
 #target.extend(['moduleC.inl'])
-#
-#
 ######################################
 #target1 = "module.h"
 #target2 = "VjObs.h"
