--- a/VE_Open/XML/CAD/SConscript
+++ b/VE_Open/XML/CAD/SConscript
@@ -2,7 +2,7 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
+Import('libPath')
 Import( 'xerces' )
 
 cad_srcs = Split("""
@@ -22,10 +22,11 @@ env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
 env.Append(CPPPATH = ['#'])
 env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(LIBPATH = '#',
+env.Append(LIBPATH = libPath,
               LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
 for lib in xerces:
    env.Append(LIBS = lib)
 
-env.SharedLibrary(target = '#/VE_CADLib', source = cad_srcs)
+targetLib = pj(libPath, 'VE_CADLib')
+env.SharedLibrary(target = targetLib, source = cad_srcs)
 #env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = cad_srcs)
