--- a/VE_CE/Utilities/SConscript
+++ b/VE_CE/Utilities/SConscript
@@ -4,6 +4,7 @@ pj = os.path.join
 Import('baseEnv')
 Import('Platform')
 Import( '*' )
+Import('libPath')
 
 
 ceutil_srcs = Split("""
@@ -31,12 +32,14 @@ env = baseEnv.Copy()
 env.Append(CPPPATH = ['#'])
 #env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
 env.Append(CPPPATH = pj( os.getenv('TAO_HOME',''), 'include') )
-#env.Append(LIBPATH = '#',
-#              LIBS = ['VE_ConductorLib', 'VE_XMLLib'])
-#for lib in xerces:
-#   env.Append(LIBS = lib)
+env.Append(LIBPATH = libPath,
+              LIBS = ['VE_ModelLib', 'VE_XMLLib',
+                      'VE_OpenModuleLib'])
+##NOTE: Change RHEL_4 to generic term later.
+for lib in xerces:
+   env.Append(LIBS = lib)
 for lib in ace_tao:
-    env.Append(LIBS = lib) 
+    env.Append(LIBS = lib)
 #for lib in vtk:
 #   env.Append(LIBS = lib)
 #for lib in osg:
@@ -48,5 +51,6 @@ for lib in ace_tao:
 #env.ParseConfig( 'vrjuggler-config vrj --libs --extra-libs --includes' )
 #env.ParseConfig( 'wx-config --cxxflags --libs' )
 
-env.SharedLibrary(target = '#/VE_CE_UtilitiesLib', source = ceutil_srcs)
+targetLib = pj(libPath, 'VE_CE_UtilitiesLib')
+env.SharedLibrary(target = targetLib, source = ceutil_srcs)
 #env.Program(pj('#','bin',Platform,'Exe_Server'), source = ceutil_srcs)
