--- a/VE_Open/XML/Shader/SConscript
+++ b/VE_Open/XML/Shader/SConscript
@@ -2,7 +2,7 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
+Import('libPath')
 Import( 'xerces' )
 
 shader_srcs = Split("""
@@ -19,10 +19,11 @@ env = baseEnv.Copy()
 #env.Append(CPPPATH = [os.getcwd()])
 env.Append(CPPPATH = ['#'])
 env.Append(CPPPATH = pj( os.getenv('XERCESCROOT',''), 'include') )
-env.Append(LIBPATH = '#',
+env.Append(LIBPATH = libPath,
               LIBS = 'VE_XMLLib')
 for lib in xerces:
    env.Append(LIBS = lib)
 
-env.SharedLibrary(target = '#/VE_ShaderLib', source = shader_srcs)
+targetLib = pj(libPath, 'VE_ShaderLib')
+env.SharedLibrary(target = targetLib, source = shader_srcs)
 #env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = shader_srcs)
