--- a/VE_Open/skel/SConscript
+++ b/VE_Open/skel/SConscript
@@ -2,7 +2,7 @@ import os, sys, string
 pj = os.path.join
 
 Import('baseEnv')
-Import('Platform')
+Import('libPath')
 Import('ace_tao')
 
 skel_srcs = Split("""
@@ -18,10 +18,11 @@ env = baseEnv.Copy()
 env.Append(CPPPATH = ['#'])
 ##env.Append(CPPPATH = pj( env['TAO_HOME'], 'include') )
 env.Append(CPPPATH = pj( '/home/vr/Applications/TSVEG/Libraries/Release/Opt/ACE_TAO/Linux-RHEL_4', 'include') )
-env.Append(LIBPATH = '#',
+env.Append(LIBPATH = libPath,
               LIBS = ['VE_XMLLib', 'VE_ShaderLib'])
 for lib in ace_tao:
    env.Append(LIBS = lib)
 
-env.SharedLibrary(target = '#/VE_OpenModuleLib', source = skel_srcs)
+targetLib = pj(libPath, 'VE_OpenModuleLib')
+env.SharedLibrary(target = targetLib, source = skel_srcs)
 #env.Program(pj('#','bin',Platform,'VE_Open','VE_XML'), source = skel_srcs)
