added the attribute remove event handler to the makefile

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -107,6 +107,7 @@ SRCS=\
    AttributeEventHandler.cxx \
    CADEventHandler.cxx \
    CADDeleteNodeEH.cxx \
+   CADRemoveAttributeEH.cxx \
    CADAddNodeEH.cxx \
    CADAddAttributeEH.cxx \
    CADSetActiveAttributeEH.cxx \
